--- a/templates/form.html
+++ b/templates/form.html
@@ -15,21 +15,21 @@
     </head>
     <body>
         <div class="container">
-        <h2>糖尿病分析預判系統</h2>
+        <h2>XYZ金融公司風險評估表</h2>
         <p>請輸入你的相關資料，以便進行分析診斷。</p>
         <form action="aml" method="post">
         <div class="form-group">
-            <label for="p1">AGE</label>
+            <label for="p1">SeriousDlqin2yrs</label>
             <input type="text" class="form-control" name="p1">
-            <label for="p2">SEX</label>
+            <label for="p2">RevolvingUtilizationOfUnsecuredLines</label>
             <input type="text" class="form-control" name="p2">
-            <label for="p3">BMI</label>
+            <label for="p3">age</label>
             <input type="text" class="form-control" name="p3">
-            <label for="p4">BloodPressure</label>
+            <label for="p4">NumberOfTime30-59DaysPastDueNotWorse</label>
             <input type="text" class="form-control" name="p4">
-            <label for="p5">Glucose</label>
+            <label for="p5">DebtRatio</label>
             <input type="text" class="form-control" name="p5">
-            <label for="p6">Insulin</label>
+            <label for="p6">MonthlyIncome</label>
             <input type="text" class="form-control" name="p6">
         </div>   
         <button type="submit" class="btn btn-default">送出</button>
